chore: added typescript

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "MIT",
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
+    "@types/node": "^22.10.5",
+    "typescript": "^5.7.2",
     "vite": "^6.0.7"
   }
 }
